# ChangeLog for sys-kernel/hardened-sources
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/hardened-sources/ChangeLog,v 1.774 2013/02/24 18:48:39 blueness Exp $

*hardened-sources-3.8.0 (24 Feb 2013)

  24 Feb 2013; Anthony G. Basile <blueness@gentoo.org>
  +hardened-sources-3.8.0.ebuild:
  vanilla-3.8.0 + genpatches-3.8-1 + grsecurity-2.9.1-3.8.0-201302231124

*hardened-sources-3.2.39 (24 Feb 2013)

  24 Feb 2013; Anthony G. Basile <blueness@gentoo.org>
  +hardened-sources-3.2.39.ebuild:
  vanilla-3.2.39 + genpatches-3.2-16 + grsecurity-2.9.1-3.2.39-201302222046

*hardened-sources-2.6.32-r152 (24 Feb 2013)

  24 Feb 2013; Anthony G. Basile <blueness@gentoo.org>
  +hardened-sources-2.6.32-r152.ebuild:
  vanilla-2.6.32.60 + genpatches-2.6.32-48 +
  grsecurity-2.9.1-2.6.32.60-201302222044

*hardened-sources-3.7.9 (20 Feb 2013)

  20 Feb 2013; Anthony G. Basile <blueness@gentoo.org>
  +hardened-sources-3.7.9.ebuild:
  vanilla-3.7.9 + genpatches-3.7-11 + grsecurity-2.9.1-3.7.9-201302171808

*hardened-sources-3.2.38-r2 (20 Feb 2013)

  20 Feb 2013; Anthony G. Basile <blueness@gentoo.org>
  +hardened-sources-3.2.38-r2.ebuild:
  vanilla-3.2.38 + genpatches-3.2-16 + grsecurity-2.9.1-3.2.38-201302171808

*hardened-sources-2.6.32-r151 (20 Feb 2013)

  20 Feb 2013; Anthony G. Basile <blueness@gentoo.org>
  +hardened-sources-2.6.32-r151.ebuild:
  vanilla-2.6.32.60 + genpatches-2.6.32-48 +
  grsecurity-2.9.1-2.6.32.60-201302181144

  18 Feb 2013; Anthony G. Basile <blueness@gentoo.org>
  -hardened-sources-2.6.32-r42.ebuild:
  Sorry ppc64, no recent stables, dropping to ~ppc64 only

  18 Feb 2013; Anthony G. Basile <blueness@gentoo.org>
  -hardened-sources-3.2.35-r1.ebuild:
  Remove another older unstable 3.2.x

  18 Feb 2013; Anthony G. Basile <blueness@gentoo.org>
  -hardened-sources-2.6.32-r144.ebuild, -hardened-sources-2.6.32-r145.ebuild,