@@ -45,6 +45,7 @@ DIST hardened-patches-3.2.39-1.extras.tar.bz2 1123502 SHA256 b146290e0d0281e0e97
 DIST hardened-patches-3.4.5-1.extras.tar.bz2 548697 SHA256 f77fdd4450cfaa051058383d4c7bce9ae7cf40cc39948a265870c8806fcdc2ef SHA512 b5b516200e0f78f6695f70ae7f7918bbd813647439f2e1df0dc0545439724c18bd5f31379d99b09372cdc91d612ab0cfef3cdeade229425a936a3e2873a56c1f WHIRLPOOL 3bc4be49dbaf31bfc592098b3cbb6c43b7d027f97c0089bf6fa1b4b914cbea4189ab6b63bf38f8dbc1647f011dedc1aa901d1b0679da875a741ca12df9ba4433
 DIST hardened-patches-3.5.4-2.extras.tar.bz2 578566 SHA256 505c3848b3ff0f2622f28e26158fcfefa793570efd7ffb07a6070fb627e84682 SHA512 3362f3ef67a8e2759ab4ae8d7065d694873b668c4d369436ff7f2262d4b8123f165bcc65f56ce3a0cca7be4f56b49e589064afa24f8cab3932d09c28f266536b WHIRLPOOL e074e418e3cade3b05bec185ff0a558ecef2903269d92ba2033745cdcde56a540a2ed3638ac5ac75cbee600d722844c53d78a1acaa1c06af4e318e65ce2c77ea
 DIST hardened-patches-3.7.5-1.extras.tar.bz2 602516 SHA256 8fe6ce23bb7008b48c8a5c693da56b9f974c3101fbc381341584d80427f17d05 SHA512 feaac905efaa52105dd444e4d62eeec73402cf25a6d36549b8311cc10c06d0e01246dc87ac56658a0844d669f41dbc20dc2d7fa654aa79cfb62d958fe4928330 WHIRLPOOL 1c1300cb467bfc2900019805c2b312619282d05f4779c44df8475365b30900a6e44e78d9bf7be39d7ef6b91c906031663fda63136c659349d435143f9775ee7b
+DIST hardened-patches-3.7.5-2.extras.tar.bz2 603088 SHA256 b09178d0026db719d97b414ea08887299944deaac28c6312bb7155108d290273 SHA512 dad9678e350af66fcbb8b2ad71d05c433d2ee0ecbd11f2c5458bdde67005a14c3a9bf7a3428d1822403ed3eed2e4f55bb0ae24047d0e9c034353abb5e1af107d WHIRLPOOL 71b49546df4bf6217633fee5d578e607587a4983b43b3a47a99530d61ff38bac92224246ae8c4ef4b73f58118c0abc240716399b001a4b14a5903a91cc30352f
 DIST hardened-patches-3.7.6-1.extras.tar.bz2 606163 SHA256 2aa4d6f3a44fcf188b6f5a7578c416dc5acd4768f0b93ed39631e8dc7a2f1af1 SHA512 447220cee2f693de4bbe0b42a08600f058ba555164b7b64bc0bd353dede391eedece39cdfbedb5910f4c408073d3e15febde44b528bad6092a8a96aadcfa91bd WHIRLPOOL 239de520c421db4f09c73844b5e5dfe78c87d6d1bfcc379ec67a8d18fe0f4a16ecc606ade1b15d8fad602108af0a43a3c1bdb68dc18939f95782fc08c5659dd8
 DIST hardened-patches-3.7.8-1.extras.tar.bz2 604463 SHA256 364357c51fb7bc5e7f67d24e92579972edf6f3888a62f6978708a521cc8ad5a2 SHA512 9157bf7a97f61d3dc858327b4268f99ddaf7bc2944322967273cd0e3ccc228d6757a2c22342f3d25b02f21b13ebfaeef2bd272bc93fd387ab803eb59e30429c5 WHIRLPOOL c5ee2baca73aece9068dc07b440d1fc0196881b032c132d8e8645de4425d9c6ee4563bd53dd4b316809e75ffce93e739fb657446e547bcbc74509c8bc6750072
 DIST hardened-patches-3.7.9-1.extras.tar.bz2 605453 SHA256 617e6bf62b9ba4934a5ccea584763d76a7499ed8269c13462b9f384dd6335148 SHA512 bce64d5a56ba98724df448c91790de07eb71c57d8f7e19ff9f0935b527e3b442647d495700deeec0f8a6cc458e6ca05dd72fc8bcffe380b2cdc561f3395480c1 WHIRLPOOL 07972f8b4b21eb34389bcfb15c6d2b01feeb61da655f06a0832239cb544ac0a437778d0a5924cae5eec78e2959317d92e49fd1eb2c832461d52470a86857f77a
@@ -73,28 +74,29 @@ EBUILD hardened-sources-3.2.38.ebuild 1813 SHA256 3f8a9556ea394651e905a48f973593
 EBUILD hardened-sources-3.2.39.ebuild 1813 SHA256 6725de6ce67c8446151fde17b6cae61863d988c279e42a9ea11396f49049cbc9 SHA512 baba5fa6366936984dcb7bacf235766e3f43d18149e4a1246a10780ead56065c68aa8ea0adaa05778151428982ac2147013a3b6f3f54db57e3ff80ec2c015747 WHIRLPOOL f33397f752f9da131cde950e84763c87ffa3b9ffaf79b119ae55b5b3d26838ca6b3808c56ede90108c44f4913dcf5eb672d66c4b23a3fd15e6d13377edd958e9
 EBUILD hardened-sources-3.4.5.ebuild 1809 SHA256 481e25c1e8498d6d9305d29966b612ee590e1590510d12103e9f3d61c3532ba7 SHA512 ff91d9cb8bdf2a8dbdccd21a812dbda2efa210b7e5d23ebe7467453d9f0aab39c74054617b6563141a98791a0514156ce9a51ea21ace4788016e907644487510 WHIRLPOOL 00c3e51ccedf322bbc7a0235cd1ec7d07765929605b0aac8950ed89a60fb03a4fa0673b7531c618fab92a02ce0429f111701482142adc3174ec2f43c197a5a25
 EBUILD hardened-sources-3.5.4-r1.ebuild 1812 SHA256 a592fde717c9265a75662437dd1b1c543b298ffe1c5ee6db525f5d04f7f662d8 SHA512 3eb14649ffb9f747f7c9cb264aefeed82818d43be241275b31af79c71173381ca2c92030accffb56d850188cdb61b7fcb610c7a5ed4b9626dff7df198ec67ec0 WHIRLPOOL ec02b86db7d6387dd86469e0ff06bd19b2b1fea2701242a405392224c56819b22af425b3f8d4947c0ae3e23fde4a270db521a7dd75911453716da36a76ade831
+EBUILD hardened-sources-3.7.5-r1.ebuild 1842 SHA256 edcd396cbcd462ae68442ca65384024fbec5058dd9ebc3fe6f0cc44594ba7970 SHA512 0c5161e672406dbce270c20d377b2f34a68b2c9d2f8c2e0f600d399663abeeee30ca8b8104d233865de94cabb7733cd594c6c0fb1fae6ef28e5b1b9b0b2483c4 WHIRLPOOL c115ae74786cfd706b1d877926a7f4091a4212cc4aedf7b8d5232f70aebcb3dc4b850f0eb39359f17839d2489ce2075af31aef4c3d75261ddcc6f29d9744bf36
 EBUILD hardened-sources-3.7.5.ebuild 1837 SHA256 49d90813b067e2f73a08bc7ca6bc3d9401e2f023384f885975b566e5b138a42c SHA512 c84e79b0150a67e232798ce712cc16e5af1eed678c23c3a3117f986cc72e45954b24a9936d52d151ac7468c979ce1a5149217a3f6d48dc2f2c80660184d8d338 WHIRLPOOL 90845b8a9a45f04b550bf16c7baa3c7fb01b2fb9876498eb6b1f5a813e06f1b9189349cd9c253267ad6ae25306928f63fad7ac654c2b457941b4df4bc65f12ce
 EBUILD hardened-sources-3.7.6.ebuild 1839 SHA256 a83be4b4bbca82a09fab5ffd7e1c1756b38c7a24c9cf6ec54239819c99e97b7a SHA512 25ed0d0e2520162370c3fec157140ee1d9add7335e21e2dda698db45d485e4d8c7138a08ac51581fe9dcfa75d16cab244323d632ce35fe3cac56155633119a9f WHIRLPOOL ce687b160824e2a41126b313c995f55240340557b0d5b2d2d8d8e99070fcfc49a7756f362e6b7ee37a3e167a2d1ee8cb2ea2b9e9ff56dbcc649a5655c5219413
 EBUILD hardened-sources-3.7.8.ebuild 1840 SHA256 16f18adeb949a93b9157004253e9302827fd25822b348402fce61cccc2febfed SHA512 474059c075fdd48198bb02512e636ada35dbb2261b146fefd80b07f8ccd50abba2c0da42af309b59bd4f9b272a9164658e4135325d418e505462ed23ef99e770 WHIRLPOOL b50b323c6137a789a6e3c10e47e12a22a8dbb48106bfa8cc3d3115fa10129664d033275ece03cf5c95397b8086b935ef9081279d28168655895898c2ba6bbcd1
 EBUILD hardened-sources-3.7.9.ebuild 1840 SHA256 dccfb39a90752f4926fd5fa406fb1a4c4ddc4e80ecdb07af1e9b7a763dc74166 SHA512 b89f0cd134d27c2c0802b064b1e46dde5a8fe31b32c9965da367e04f74caad03234e74eda012df040c8d519eabec0c866b9afa8c58ff9a559b78b10d0035a6b3 WHIRLPOOL df11ed031c778480725cc66c7b07b7922a9ea3ab30a45b7cebb7600c4bd8236b0d7e871844134df5bf56ec9918ac708e548908e813bfd4d6ccbdbec51c489881
 EBUILD hardened-sources-3.8.0.ebuild 1839 SHA256 5db2941344a44e1321b2ba5e14598e256df0f4147a14976d0d8369f28a1271a8 SHA512 01e361a1c98a92f172e4b0bf387549a142a7e5f6213a2fd0fb876e7f02386d81a9ef1021dd747cb233507941f0f0b485052414eaa80eb06ceba1680be1f0ace5 WHIRLPOOL 7adf1fa140474c7ff702a99988da2677f094c90cceb03ce8ed66294fe709b9963a6e008d83e6eca83bf953df4a61dc9dd1df14b64e7b47db492759c28c8ad6e5
-MISC ChangeLog 58380 SHA256 c377d13c7aa801fefb713904439da2af7d4f04d41d065e1ff70c293f05045d1e SHA512 13419d047bd0cacc44a0190be17e5fadb81598981e662be56f6d76aca8cc7669440b59741af4c50aeac926b59a1218980760097fef585716e0cbc42184245a64 WHIRLPOOL c4a1e0c633dd33f65a6343be0cb05aca971047f9a7230928ca585f3d92d21be9c583da031dd62f08778f2c9382abd1b1026af4cfa97d4b4d12848fba950a25e9
+MISC ChangeLog 58606 SHA256 8bc0aefdba36e689c9dadb996354c7896d4c13cc15930252594aebf5c5278100 SHA512 85532424b5b864b8958a08d7436b1de0972401331c04f4b4237df77daad7f6c0afea11e8d4acb3a3e8bde5cb32dd7aaf55f63d485e5661c727d9478d49ce74e0 WHIRLPOOL a1a26e1ce5d74206e03acca75fcbd9e04ee31ab3107a73582966fcbf49e3e442252b862ff1f200709adcbe194e5a0b503f0c33a5f41a6b8403f6aecac708cbb3
 MISC ChangeLog-2011 112069 SHA256 39bac69a08709be5b79c6e711fd94aac7e53191b76fef64f9b3d09f7b5ac0f82 SHA512 3d66e844a3f619a530e7ff236cbbb095bf9150e1542048268646468afe09d1fb20da3ea8dfa4b80812f35f9eeed1e399a115ceb573cce43f34f1c30c0ff67ee5 WHIRLPOOL c55f94fc4655b77b9db447c8f315af698e5c180496f9a333e22aa16c57c172e26bf9dbb0a70d7319c1a54943bce4756d11679f3c3435cb90bf427a64e49ded34
 MISC metadata.xml 576 SHA256 53e0d3bfb958bcbf62457a89abe76a7a6f5a2b1df5decb04bf8b840184cc5828 SHA512 aabb8324fc608a74fecda5e4fff0f29d47d34ff20bdea2af8a69726772268d7b3b9d2639cd9c2308b3c79b89d9e923d2a96b212e7cfe59a0bf0008e3fb1c7e6a WHIRLPOOL 11fc891bd478667fe4ca5d203b366fdcf1680dac31bf997ea7c707c6f00a1c03b6ca7a00045b75dc1604e9eb57c2cab03a12f46318320ed6abdb5d6feb06b71f
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBCAAGBQJRKmCFAAoJEJOE+m71LUu6NXQP/jmoXeyX1uEQvnZXWxJ06D7h
-FCjyFuyfJ8507AT7VH0brwdY4e6qcO1Y7DH3OKG8wmLa/TU7JZnUJvmyHmnhmL6k
-IKYWYvijCp4lfsFfd5Psb68DBx/+t+gSipa2bd+3rgSLa67CQYgVJTRCz53GEINq
-n4gPx91cTZva6aIs9oV3as07KRE6V5Ry/fS+iIBs2TN5gHvskwuhInS0PmqKsRFh
-nArRFVf/XJg/R2JLo/e8lhxjN1J7VK2EKmBHgP3yhJvwmL3PZOofTLJiLXckOFXS
-lDotODSRCOCfu1SdVYQqjJC4s0YytQH2eHG0wPeEWBCiRy0SRJ99Z7iG2mVo9UdI
-MCxJszkLjiT/eCGFQP2nBEDF9D2R1e4juHuf0Kq68iPfVxGoPwH78nxpPY9/skYs
-g9KaTky1NDm7oLG9k3qLJJ10HQn6GEmjHez3R+3RjJtlt0sl8veFUjae/8NwjzUz
-Rn6fQEDbv7AcpEJXvEQ0yDPZ1MvZh5C9U48J22nX8+M0BIYjyGTQg1ZFIK1ilOnz
-Dg88mKTX5xF5qeq7W33MXYd4cs54S9ANwAYciw6MZu9PFp059m1wBd+YA0Mpmv6O
-t5chwKmBJkZ45hO8pEElWC2elsWMi33zq1Ot7aYjkzS00t9VW/1Gzf5gScu0KuA7
-lIysuWULzeB8VRbqFOy1
-=jWRV
+iQIcBAEBCAAGBQJRLAvBAAoJEJOE+m71LUu6HNYP/3scTnvKQvz9SRV2HkR67H98
+qyhMbwth96Gh1hTT+ZUykGWqXd9uHRi1JFCrohTLoBnWaT+KJkQRrNetpCxqnzGB
+4xS3YVjOjQoq8umNaW2Fj7JBaps+71A+ILX8bxFvJpm02OuEYBKNxNf8dHAAoTww
+rv8V6uFMs531G3ZVXL9955i78UGN+cdPbqOCp7G8f4nMNu+X7GVMtmziJBKZd+Kk
+BBv5rhpEaUeadzDj5HFA56CrBwkMPvWKWQi/lojsqDn6xTPN0xOXbrIYWZpvmcpV
++oIDcsqmWF3NRBjyOLq+0TMsohpN9fP++DapLUcP97xKjPnOkwf5etX5J5fnYhNw
+T4DWHxekUbva1Rwu339vU6vKjovqELNQVdWD7yk0Lz+8nAd4cdsClb0Wlx5EsnqV
+9QFS1numhlW0zjnT8R4OiURxvjJWlQgiqhENri7E+PsRtuc5HO7AiHp451TdfpgO
+TbzFGvbS2Uy4LvB2hjLrmbJWXlSVp8pjzY7a9VEoHQ9CctIapHFnno8sNgcX1WDN
+yp1CjpUyzAfY28B5P7XgQQsxxUahm6kvoPkiYaUO6WzmgkA/0id01jqJD3VSHNE0
+E3TxMD0EIX7kU8EgIl39KKl+ivUl8/7borbhtjYxoQidlj1+rk3KB6xtWjZjYi0d
+ULtO9uAf55gfYxL1DViU
+=l38q
 -----END PGP SIGNATURE-----
